--- a/Horizon/templates/Horizon/postlist.html
+++ b/Horizon/templates/Horizon/postlist.html
@@ -1,37 +1,65 @@
+{% extends 'Horizon/base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="{% static 'css/style.css' %}">
-	<title>Horizons Post List</title>
-</head>
-<body>
-	<h1><center>Horizons Posts</center></h1>
-	<h2>List of posts</h2><br>
-	<li>Namibia</li>
-	<li>Martyrs</li>
+{% block styling%}
+    <link rel="stylesheet" href='{% static "css/postlist_style.css"%}'>
+{% endblock %}
+
+{% block content %}
 	
-	<img src ='{% static "scrap.png" %}' alt="Scrap" width="300px" align="right">
+	<div class="spectrum">
+		<div class="black"></div>
+		<div class="white">
+			<img src="{% static 'backs/nightsky.jpg' %}">
+		</div>
+		<div class="hero">
+			{% for row in heropost %}
 
-	{% with firstname="Soldier" %}
-	<h1>Hello {{ firstname }}, how are you?</h1>
-	{% endwith %}
+			<h4>{{ row.published | date:"F, Y"}} | Author: {{ row.author }}</h4>
+			<hr class='redline'>
+			<h2>{{row.title}}</h2>
+			<h3>{{row.sub_title}}</h3>
 
-	<table style="width:100%">
-		<thead>
-			<th style="width:20%">Title</th>
-			<th>Article</th>
-			<th style="width:15%">Published Date</th>
-			</thead>
-	{% for r in posts %}
-		<tr>
-			<td>{{r.title}}</td>
-			<td>{{r.article}}</td>
-			<td>{{r.published}}</td>
-		</tr>
-	{% endfor %}
-	</table>
-</body>
-</html>
+			{% endfor %}
+		</div>
+	</div>
+	<br><br>
+	<h1>Blog Reading Section</h1>
+
+	<h2>Latest Posts</h2>
+	<hr class="redline" style="margin-left:20px;"><br>
+	<div class="latest">
+		{% for r in latest_posts %}
+			<div class="card">
+				<div class="cover"><img src="{% static 'backs/'%}{{r.bg_name}}" alt='{{r.bg_name}}'></div>
+				<div class="info">
+					<div class="head"	>
+						<h3>{{r.title}}</h3>
+					</div><br>
+					Author: {{r.author}}<br>
+					Genre: {{r.genre}}<br>
+					Date: {{r.published | date:'d F,Y'}}
+				</div>
+			</div>
+		{% endfor %}
+	</div>
+
+	<!-- Editor's choice -->
+	<h2>Editor's Choice</h2>
+	<hr class="redline" style="margin-left:20px;"><br>
+	<div class="latest">
+		{% for r in editors %}
+			<div class="card" style="background-color: #BFDDCE">
+				<div class="cover"><img src="{% static 'backs/'%}{{r.bg_name}}" alt='{{r.bg_name}}'></div>
+				<div class="info">
+					<div class="head"	>
+						<h3>{{r.title}}</h3>
+					</div><br>
+					Author: {{r.author}}<br>
+					Genre: {{r.genre}}<br>
+					Date: {{r.published | date:'d F,Y'}}
+				</div>
+			</div>
+		{% endfor %}
+	</div>
+	<br><br><br><br><br><br>
+{% endblock %}
