--- a/Horizon/templates/Horizon/homer.html
+++ b/Horizon/templates/Horizon/homer.html
@@ -1,5 +1,10 @@
 {% extends 'Horizon/base.html' %}
 {% load static %}
+
+{% block title%}
+    <title>Home</title>
+{% endblock%}
+
 {% block styling%}
     <link rel="stylesheet" href='{% static "css/homer_style.css"%}'>
 {% endblock %}
