--- a/Horizon/static/css/postlist_style.css
+++ b/Horizon/static/css/postlist_style.css
@@ -1,6 +1,4 @@
-:hgt={{ht}}
-
-h1{
+.readhead1{
 	font-family: Poppins;
 	align-content: center;
 	text-align: center;
@@ -75,7 +73,7 @@ h1{
 	margin-top: 2%;
 }
 /* Latest Posts  */
-h2{
+.readhead2{
 	font-family: 'Poppins';
 	font-size: 35px;
 	color: rgb(45,30,100);
